# freertos

./: .clang-format  .git-blame-ignore-revs  CMakeLists.txt  Makefile  README.md  event_groups.c  event_groups.cpp  list.c  list.cpp  queue.c  queue.cpp  stream_buffer.c  stream_buffer.cpp  stripcmt.cpp  tasks.c  tasks.cpp  timers.c  timers.cpp
config/: FreeRTOSConfig.h
include/: CMakeLists.txt  FreeRTOS.h  StackMacros.h  atomic.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  list.hpp  message_buffer.h  mpu_prototypes.h  mpu_syscall_numbers.h  mpu_wrappers.h  newlib-freertos.h  picolibc-freertos.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stdint.readme  stream_buffer.h  task.h  task.hpp  timers.h
portable/: readme.txt
portable/Common/: mpu_wrappers.c  mpu_wrappers_v2.c
portable/GCC/ARM_CM0/: mpu_wrappers_v2_asm.c  port.c  portasm.c  portasm.h  portmacro.h
portable/GCC/ARM_CM3/: port.c  portmacro.h
portable/GCC/ARM_CM3_MPU/: mpu_wrappers_v2_asm.c  port.c  portmacro.h
portable/GCC/ARM_CM4F/: port.c  portmacro.h
portable/GCC/ARM_CM4_MPU/: port.c  portmacro.h
portable/MSVC-MingW/: port.c  portmacro.h
portable/MemMang/: heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c
